--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "chrome-extension-boilerplate",
+  "name": "SummarEase",
   "version": "1.0.0",
   "description": "Enter description here",
   "main": "index.js",
-  "repository": "https://github.com/vivek9patel/chrome-extension-react-boilderplate",
-  "author": "vivek9patel",
-  "license": "MIT",
+  "author": "Madhava Srinivasan.SR",
   "scripts": {
     "dev": "webpack --watch --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "openai": "^4.77.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
-    "css-loader": "^6.5.1",
-    "copy-webpack-plugin": "^10.2.0",
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.2.0",
+    "css-loader": "^6.5.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-merge": "^5.8.0"
