--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "Enter your extension name here",
-    "description": "Enter your extension description here",
+    "name": "AI Summarizer",
+    "description": "summarizes the content of your webpage",
     "version": "1.0.0",
     "manifest_version": 3,
-    "author": "<author_name>",
+    "author": "Madhav Srinivasn",
     "icons": {
         "16": "icons/16.png",
         "48": "icons/48.png",
@@ -12,7 +12,7 @@
     "background": {
         "service_worker": "background.js"
     },
-    "permissions": [],
+    "permissions": ["activeTab", "scripting"],
     "action": {
         "default_popup": "popup.html"
     },
