--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SummarEase",
+  "name": "chrome-extension-react-boilerplate",
   "version": "1.0.0",
   "description": "Enter description here",
   "main": "index.js",
